@@ -60,7 +60,7 @@
  *      software in accordance with the terms specified in this
  *      license.
  *
- * RCS: @(#) $Id: tkMacOSXCarbonEvents.c,v 1.6 2005/11/27 02:36:14 das Exp $
+ * RCS: @(#) $Id: tkMacOSXCarbonEvents.c,v 1.7 2005/12/01 06:24:16 hobbs Exp $
  */
 
 #include "tkInt.h"
@@ -196,6 +196,7 @@ TkMacOSXInitCarbonEvents (
 	    {kEventClassWindow,		kEventWindowExpanded},
 	    {kEventClassApplication,	kEventAppHidden},
 	    {kEventClassApplication,	kEventAppShown},
+	    {kEventClassApplication,    kEventAppAvailableWindowBoundsChanged},
     };
     EventHandlerUPP handler = NewEventHandlerUPP(CarbonEventHandlerProc);
 
@@ -247,6 +248,7 @@ TkMacOSXInitCarbonEvents (
 	_TraceEventByName(CFSTR("kEventWindowExpanded"));
 	_TraceEventByName(CFSTR("kEventAppHidden"));
 	_TraceEventByName(CFSTR("kEventAppShown"));
+	_TraceEventByName(CFSTR("kEventAppAvailableWindowBoundsChanged"));
     }
 #endif /* TK_MAC_DEBUG_CARBON_EVENTS */
 }
