@@ -1,9 +1,16 @@
 2005-12-01  Daniel Steffen  <das@users.sourceforge.net>
 
-	* unix/tcl.m4 (Darwin): fixed error when MACOSX_DEPLOYMENT_TARGET unset.
+	* unix/tcl.m4 (Darwin): fixed error when MACOSX_DEPLOYMENT_TARGET unset
 	* unix/configure: regen.
 
 2005-11-30  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* macosx/tkMacOSXXStubs.c (TkpOpenDisplay, TkMacOSXDisplayChanged): 
+	* macosx/tkMacOSXWindowEvent.c (TkMacOSXProcessApplicationEvent): 
+	* macosx/tkMacOSXCarbonEvents.c (TkMacOSXInitCarbonEvents): 
+	* macosx/tkMacOSXEvent.h: Trap kEventAppAvailableWindowBoundsChanged
+	* macosx/tkMacOSXInt.h:   event to watch for change in display size
+	and adjust internal state appropriately.
 
 	* doc/checkbutton.n: fix -selectcolor docs [Bug 1083838]
 
